# glib

./: .gitignore  config.h.meson  configure.ac  meson.build
docs/reference/gio/: gio-sections.txt
gio/: Makefile.am  build_mkenum.py  gdelayedsettingsbackend.c  gmemorysettingsbackend.c  gregistrysettingsbackend.c  gsettings.c  gsettingsbackend.c  gsettingsbackend.h  gsettingsbackendchangeset.c  gsettingsbackendinternal.h  meson.build
gio/gdbus-2.0/codegen/: codegen.py  gdbus-codegen.in  meson.build
gio/inotify/: meson.build
gio/kqueue/: meson.build
gio/tests/: Makefile.am  meson.build
gio/win32/: meson.build
glib/: gmacros.h  meson.build
glib/pcre/: meson.build
glib/tests/: Makefile.am  meson.build
gmodule/: meson.build
gobject/: meson.build
gobject/tests/: meson.build
gthread/: meson.build
